# Digital-Cockpit

./: README.md
Digital_Cockpit/: Makefile  docker-compose.yml
Digital_Cockpit/IPC_Service/: CMakeLists.txt  Dockerfile
Digital_Cockpit/IPC_Service/Library_installation/: commonapi-someip.ini  server_script.sh  vsomeip.json
Digital_Cockpit/IPC_Service/Service/: CANService.cpp  CANService.hpp  main.cpp
Digital_Cockpit/IPC_Service/middleware/: CANService.fdepl  CANService.fidl
Digital_Cockpit/IPC_Service/middleware/src-gen/v1/org/example/canservice/: CANService.hpp  CANServiceProxy.hpp  CANServiceProxyBase.hpp  CANServiceSomeIPDeployment.cpp  CANServiceSomeIPDeployment.hpp  CANServiceSomeIPProxy.cpp  CANServiceSomeIPProxy.hpp  CANServiceSomeIPStubAdapter.cpp  CANServiceSomeIPStubAdapter.hpp  CANServiceStub.hpp  CANServiceStubDefault.hpp  EventGroupIDs.h
Digital_Cockpit/QT/Instrument_cluster/: CMakeLists.txt  CMakeLists.txt.user.fb14e6b  Main.qml  Makefile  appInstrument_cluster  appinstrument_cluster_qmltyperegistrations.cpp  cmake_install.cmake  main.cpp  vcan.cpp  vcan.h  vcanworker.cpp  vcanworker.h
Digital_Cockpit/QT/Instrument_cluster/.cache/clangd/index/: vcan.h.7BAD0241755CF37F.idx
Digital_Cockpit/QT/Instrument_cluster/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Digital_Cockpit/QT/Instrument_cluster/.qt/deploy_qml_imports/: appInstrument_cluster.cmake
Digital_Cockpit/QT/Instrument_cluster/.qt/qml_imports/: appInstrument_cluster_build.rsp  appInstrument_cluster_conf.cmake  appInstrument_cluster_conf.rsp
Digital_Cockpit/QT/Instrument_cluster/.qt/rcc/: appInstrument_cluster_raw_qml_0.qrc  qmake_Instrument_cluster.qrc  qrc_appInstrument_cluster_raw_qml_0.cpp  qrc_qmake_Instrument_cluster.cpp
Digital_Cockpit/QT/Instrument_cluster/.rcc/qmlcache/: all_aotstats.aotstatslist  appInstrument_cluster_Main_qml.cpp  appInstrument_cluster_Main_qml.cpp.aotstats  appInstrument_cluster_qml_loader_file_list.rsp  appInstrument_cluster_qmlcache_loader.cpp  module_Instrument_cluster.aotstatslist
Digital_Cockpit/QT/Instrument_cluster/.rcc/qmllint/: appInstrument_cluster.rsp  appInstrument_cluster_json.rsp  appInstrument_cluster_module.rsp
Digital_Cockpit/QT/Instrument_cluster/Instrument_cluster/: Main.qml  appInstrument_cluster_qml_module_dir_map.qrc  qmldir
Digital_Cockpit/QT/Instrument_cluster/appInstrument_cluster_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Digital_Cockpit/QT/Instrument_cluster/appInstrument_cluster_autogen/EWIEGA46WW/: moc_vcan.cpp  moc_vcan.cpp.d  moc_vcan.cpp.json
Digital_Cockpit/QT/Instrument_cluster/meta_types/: appInstrument_cluster_json_file_list.txt  appInstrument_cluster_json_file_list.txt.timestamp  qt6appinstrument_cluster_metatypes.json.gen
Digital_Cockpit/QT/Instrument_cluster/qmltypes/: appInstrument_cluster_foreign_types.txt
Digital_Cockpit/speedo_feeder/: Dockerfile
Digital_Cockpit/speedo_feeder/headers/: speed.hpp
Digital_Cockpit/speedo_feeder/scripting/: speed_feeder.sh
Digital_Cockpit/speedo_feeder/src/: main.cpp  speed.cpp
assets/: Screencast from 2024-12-27 22-19-53.webm
